[project]
name = "op-registration"
version = "0.1.0"
description = ""
authors = [
    {name = "Wilson",email = "wilson.diant@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "schedule (>=1.2.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "inquirerpy (>=0.3.4,<0.4.0)",
    "playwright (>=1.51.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "op_registration", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
